syntax = "proto3";

option java_multiple_files = true;
option java_package = "fr.eletutour.integration.grpc";
option java_outer_classname = "GreetingProto";

package grpc;

// The greeting service definition.
service GreetingService {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
